--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -20,6 +20,12 @@
                     <li class="nav-item">
                         <a class ="nav-link" href="{% url 'noteapp:index' %}">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class ="nav-link" href="{% url 'noteapp:logout' %}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class ="nav-link" href="{% url 'noteapp:login' %}">Login</a>
+                    </li>
                 </ul>
             </div>
 
